@@ -20,6 +20,10 @@ Fernando Lopez-Lezcano
   Jackdmp changes log
 ---------------------------
 
+2008-04-03 Stephane Letz  <letz@grame.fr>
+		
+	* Correct a dirty port array issue in JackGraphManager::GetPortsAux.
+
 2008-03-31 Stephane Letz  <letz@grame.fr>
 		
 	* New SetNonBlocking method for JackSocket.
